Working Arcade.dev policy processing (but early/crude)
